--- a/index.html
+++ b/index.html
@@ -9,14 +9,15 @@
     <p>TThis app does not collect any data. All saved verses stay on your device and are not transmitted anywhere.</p>
   <h1>Terms of Use</h1>
   <p> This app uses the World English Bible (WEB), a public domain modern English translation of the Bible.
-<br>
+<br><br>
                     This app is provided for personal use only. The content is intended for informational and inspirational purposes. While we strive for accuracy, no guarantees are made regarding the completeness or correctness of the content.
 <br>
+      <br>
                     By using this app, you agree that:
-
-                    • The app is provided *as is*, for personal reflection and inspiration.  
-                    • No personal data is collected, stored, or shared.  
-                    • All saved content remains on your device and is never transmitted.  
+<br><br>
+                    • The app is provided *as is*, for personal reflection and inspiration.  <br>
+                    • No personal data is collected, stored, or shared.  <br>
+                    • All saved content remains on your device and is never transmitted.  <br>
                     • We do not offer any warranties, and you use the app at your own discretion.</p>
 </body>
 </html>
